Fixed bug where slider drag doesn't work on mobile

--- a/client/src/style.css
+++ b/client/src/style.css
@@ -255,7 +255,7 @@ input:checked ~ .heart-unselect {
 
 .range-thumb {
     width: 100%;
-    height: 0px;
+    height: 10px;
     cursor: pointer;
 }
 
@@ -263,10 +263,7 @@ input:checked ~ .heart-unselect {
     width: 90%;
     left: 0;
     right: 0;
-    margin-left: 5px;
-    margin-right: 5px;
-    margin-top: 5px;
-    margin-bottom: 5px;
+    margin: 5px;
     border-radius: 5px;
 }
 
@@ -571,7 +568,7 @@ p {
 .preview-cover-background {
     position: relative;
     width: 100%;
-    max-height: 550px;
+    height: 550px;
     object-fit: cover;
 }
 
